# roc-translator

./: #.gitignore#  #roc-translator.cabal#  .#roc-translator.cabal  .gitignore  LICENSE  README.md  roc-translator.cabal  stack.yaml
src/Protocol/: #PointTypes.hs#  .#PointTypes.hs  PointTypes.hs  PointTypes.hs~  ROC.hs
src/Protocol/ROC/: #RocSerialize.hs#  *Find*  .#PointTypesParser.hs  .#RocSerialize.hs  Float.hs  Float.hs~  FullyDefinedPointType.hs  Internal.hs  OpCodes.hs  PointType4Parameters.hs  PointTypes.hs  ROCConfig.hs  RocSerialize.hs  Utils.hs
src/Protocol/ROC/PointTypes/: PointType0.hs  PointType1.hs  PointType10.hs  PointType117.hs  PointType118.hs  PointType12.hs  PointType120.hs  PointType121.hs  PointType122.hs  PointType13.hs  PointType14.hs  PointType15.hs  PointType16.hs  PointType17.hs  PointType172.hs  PointType173.hs  PointType174.hs  PointType175.hs  PointType176.hs  PointType177.hs  PointType18.hs  PointType19.hs  PointType2.hs  PointType20.hs  PointType21.hs  PointType3.hs  PointType4.hs  PointType40.hs  PointType41.hs  PointType42.hs  PointType43.hs  PointType44.hs  PointType45.hs  PointType46.hs  PointType47.hs  PointType48.hs  PointType5.hs  PointType52.hs  PointType53.hs  PointType54.hs  (+19 more)
test/Protocol/: #FloatSpec.hs#  Float.hs  FloatSpec.hs  ROCSpec.hs
test/Protocol/ROC/: FloatSpec.hs
