Name:                   roc-translator
Version:                0.0.0
Author:                 Jeremy<jpeterson@aacs-us.com>
Maintainer:             Jeremy<jpeterson@aacs-us.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Protocol.ROC
                        Protocol.ROC.PointTypes
  Other-Modules:        Protocol.ROC.Internal
  Build-Depends:        base >= 4 && < 5
                        ,crc-fast == 0.1.0 
                       , serialport >= 0.4.7 && < 0.4.8
                       , transformers >= 0.3.0.0 && < 0.4.0.0
                       , bytestring >= 0.10.4.0 && < 0.10.4.1
                       , lens       >= 3.10 && < 4
                       , binary
                       , crc16-table == 0.1
Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
--  Location:             
