Name:                   roc-translator
Version:                0.1.0
Author:                 Jeremy<jpeterson@aacs-us.com>
Maintainer:             Jeremy<jpeterson@aacs-us.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Protocol.ROC
                        Protocol.ROC.OpCodes
                        -- Protocol.ROC.PointTypes
                        -- Protocol.ROC.Float
                        -- Protocol.ROC.Utils
                        -- Protocol.ROC.FullyDefinedPointType
                        -- Protocol.ROC.RocSerialize                       

  Other-Modules:        Protocol.ROC.Internal

  Build-Depends:        base >= 4 && < 5
                       , crc16-calculator == 0.0.1 
                       , serialport
                       , transformers 
                       , bytestring    
                       , lens
                       , binary
                       , cereal
                       , time

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , roc-translator
                      , hspec

Source-Repository head
  Type:                 git
--  Location:             
